[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-openenv"
version = "0.1.0"
description = "Deterministic OpenEnv-style adaptive traffic signal control benchmark."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "openai==1.99.5",
    "openenv-core>=0.2.0",
    "pydantic==2.11.7",
    "uvicorn==0.35.0",
]

[project.scripts]
server = "app:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["traffic_env*"]
